objects/Case.object
<CustomObject>
    <fields>
        <fullName>PayPal_ORC__c</fullName>
        <description>Counts the number of Paypal ORC. Used in the Process ORC button to assign to the POS team</description>
        <label>PayPal ORC</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Method_of_Payment__c</field>
            <operation>equals</operation>
            <value>PayPal</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Payment Method used to pay for the Order</description>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Queue_Owner_ID__c</fullName>
        <description>Prints the ID of the last Queue to own this record. Used to send cases on hold back to previous queue.</description>
        <label>Previous Queue Owner ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Queue_Owner_Name__c</fullName>
        <description>Provides the display name of previous queue owner ID. Used to send cases on hold back to previous queue.</description>
        <formula>Case( Previous_Queue_Owner_ID__c,
&quot;00G2E000005A9qgUAC&quot;,	&quot;Chat English&quot;,
&quot;00G2E000005A9qhUAC&quot;,	&quot;Chat French&quot;,
&quot;00G2E000005A9qiUAC&quot;,	&quot;Chat - MHF&quot;,
&quot;00G2E000005A9qjUAC&quot;,	&quot;Chat - MHF French&quot;,
&quot;00G2E000005A9qkUAC&quot;,	&quot;Executive Escalation&quot;,
&quot;00G2E000005A9qlUAC&quot;,	&quot;Fraud&quot;,
&quot;00G2E000005A9qmUAC&quot;,	&quot;Hold&quot;,
&quot;00G2E000005A9qoUAC&quot;,	&quot;La Baie&quot;,
&quot;00G2E000005AGs9UAG&quot;,	&quot;LT - Bay Escalations&quot;,
&quot;00G2E000005A9qnUAC&quot;,	&quot;LT - Main&quot;,
&quot;00G2E000005A9qpUAC&quot;,	&quot;MHF&quot;,
&quot;00G2E000005AGsAUAW&quot;,	&quot;MHF Delivery&quot;,
&quot;00G2E000005AGsBUAW&quot;,	&quot;MHF ERA&quot;,
&quot;00G2E000005AGsCUAW&quot;,	&quot;MHF French&quot;,
&quot;00G2E000005AGsDUAW&quot;,	&quot;MHF French Leadership Hotline&quot;,
&quot;00G2E000005AGsEUAW&quot;,	&quot;MHF Leadership Hotline&quot;,
&quot;00G2E000005AGsFUAW&quot;,	&quot;MHF Rewards&quot;,
&quot;00G2E000005ANqFUAW&quot;,	&quot;MHF Service Excellence&quot;,
&quot;00G2E000005ABfiUAG&quot;,	&quot;POS - Bay&quot;,
&quot;00G2E000005ANuHUAW&quot;,	&quot;POS - Bay Excalations&quot;,
&quot;00G2E000005ABfjUAG&quot;,	&quot;POS - LT&quot;,
&quot;00G2E000005ABfkUAG&quot;,	&quot;POS - MHF&quot;,
&quot;00G2E000005AGsGUAW&quot;,	&quot;POS - Order/Item not received&quot;,
&quot;00G2E000005A9qqUAC&quot;,	&quot;POS Team&quot;,
&quot;00G2E000005A9qrUAC&quot;,	&quot;Service Excellence&quot;,
&quot;00G2E000005AIf0UAG&quot;,     &quot;HBC SE-MNR&quot;,
&quot;00G2E000005A9qsUAC&quot;,	&quot;Social Media&quot;,
&quot;00G2E000005A9qtUAC&quot;,	&quot;Store Operations&quot;,
&quot;00G2E000005A9quUAC&quot;,	&quot;Tier 2&quot;,
&quot;00G2E000005A9qvUAC&quot;,	&quot;Team Lead - Fraud&quot;,
&quot;00G2E000005A9qwUAC&quot;,	&quot;The Bay - Main&quot;,
&quot;None&quot;)</formula>
        <label>Previous Queue Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code_Amount__c</fullName>
        <description>Value of the promo code that was applied</description>
        <formula>TEXT(Promo_Code_Lookup__r.Amount_List__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of the promo code that was applied</inlineHelpText>
        <label>Promo Code Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to promo code, should not be on a page layout</description>
        <label>Promo Code Lookup</label>
        <referenceTo>Promo_Code__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Code_Terms__c</fullName>
        <description>Used to add content to promo code emails</description>
        <label>Promo Code Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stamped when promo code is associated to the case. Added to the case close email</description>
        <label>Promo Code</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reopened_Flag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reopened Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution_Information__c</fullName>
        <description>Restricted access field</description>
        <label>Resolution Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Return_Label_Link__c</fullName>
        <description>Field used to capture the return label from Narvar.</description>
        <inlineHelpText>Field used to capture the return label from Narvar. Copy and paste the value into this field.</inlineHelpText>
        <label>Return Label Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <description>Restricted access field</description>
        <label>Root Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SFCC_Customer_Id__c</fullName>
        <description>This field holds salesforce commerce cloud customer id. Usually case will be connected to contact but this field is to cover edge cases.</description>
        <inlineHelpText>This field holds salesforce commerce cloud customer id. Usually case will be connected to contact but this field is to cover edge cases.</inlineHelpText>
        <label>SFCC Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFCC_Customer_Number__c</fullName>
        <description>This field holds commerce cloud customer number</description>
        <inlineHelpText>This field holds commerce cloud customer number</inlineHelpText>
        <label>SFCC Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFCC_Order_No__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Order No. This is optional field</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Order No. This is optional field</inlineHelpText>
        <label>SFCC Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Address Issue</fullName>
                </value>
                <value>
                    <fullName>Alterations / repairs</fullName>
                </value>
                <value>
                    <fullName>Availability / assortment of merchandise</fullName>
                </value>
                <value>
                    <fullName>Bay PLCC/Mastercard Holder</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed as customer paying with Gift Card</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed as sale ended</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed because of delivery date</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed because of the DC pick up location</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed because SKU is discontinued</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed due to competitor pricing</fullName>
                </value>
                <value>
                    <fullName>BTO order not placed due to Out of Zone delivery cost</fullName>
                </value>
                <value>
                    <fullName>Call to MHF in error</fullName>
                </value>
                <value>
                    <fullName>Cancel at Door</fullName>
                </value>
                <value>
                    <fullName>Casper</fullName>
                </value>
                <value>
                    <fullName>Change a Reward Account Address</fullName>
                </value>
                <value>
                    <fullName>Change Rejected MOP</fullName>
                </value>
                <value>
                    <fullName>Credit Points Dispute</fullName>
                </value>
                <value>
                    <fullName>Cust /SA request for Special Delivery Arrangements</fullName>
                </value>
                <value>
                    <fullName>Cust call for Warranty/ Parts or In Home Repair</fullName>
                </value>
                <value>
                    <fullName>Customer f/up missed/cust. Waiting on update</fullName>
                </value>
                <value>
                    <fullName>Customer request for Compensation</fullName>
                </value>
                <value>
                    <fullName>Customer requests Return / Exchange out of policy</fullName>
                </value>
                <value>
                    <fullName>Custom wants to place an order</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DC Pick-Up Loc</fullName>
                </value>
                <value>
                    <fullName>Delay in issuing refund credit</fullName>
                </value>
                <value>
                    <fullName>Delivery fees</fullName>
                </value>
                <value>
                    <fullName>DP/Courier Issues (late delivery; damaged; returned to store; wrong address; left in rain)</fullName>
                </value>
                <value>
                    <fullName>DP - Driver concerns/service concerns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Issue_End__c</fullName>
        <description>Stamped by process when case is taken out of system issue status</description>
        <label>System Issue End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Issue_Start__c</fullName>
        <description>Stamped by process when case is set to system issue status</description>
        <label>System Issue Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TL_Review_Reason__c</fullName>
        <label>TL Review Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TL_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TL Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer. Part of time in business hours package</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_with_Agents__c</fullName>
        <formula>Calendar_Time_with_Agents__c /  Total_Calender_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Time with Agents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Time_with_Company__c</fullName>
        <formula>Calendar_Time_with_Company__c /  Total_Calender_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Time with Company</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Time_with_Queues__c</fullName>
        <formula>Calendar_Time_with_Queues__c /  Total_Calender_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Time with Queues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Biz_Days__c</fullName>
        <description>Total Business time in days. Note:  simply hours / 24,  not elapsed number of days.</description>
        <formula>Total_BusinessTime__c /(3600*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Business time in days.  Note:  simply hours / 24,  not elapsed number of days.</inlineHelpText>
        <label>Total Biz Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Biz_Hours__c</fullName>
        <description>Total Business time in hours</description>
        <formula>Total_BusinessTime__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Business time in hours</inlineHelpText>
        <label>Total Biz Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Biz_Min__c</fullName>
        <description>Total Business time in minutes</description>
        <formula>Total_BusinessTime__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Business time in minutes</inlineHelpText>
        <label>Total Biz Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_BusinessTime__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total BusinessTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cal_Days__c</fullName>
        <description>Total Calendar time in Days.   This is just hours  divided by 24.</description>
        <formula>Total_Calender_Time__c / (3600* 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Calendar time in Days.   This is just hours  divided by 24.</inlineHelpText>
        <label>Total Cal Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cal_Hours__c</fullName>
        <description>Total Calendar time in hours</description>
        <formula>Total_Calender_Time__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Calendar time in hours</inlineHelpText>
        <label>Total Cal Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cal_Min__c</fullName>
        <description>Total Calendar time in minutes</description>
        <formula>Total_Calender_Time__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Calendar time in minutes</inlineHelpText>
        <label>Total Cal Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Calender_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Calendar Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Touches__c</fullName>
        <formula>No_Owner_changes__c +  No_Status_changes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Stewardship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Stewardship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Time__c</fullName>
        <description>The time when this case was transferred by the agent</description>
        <inlineHelpText>The time when this case was transferred by the agent</inlineHelpText>
        <label>Transfer Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transferred_Number__c</fullName>
        <description>The dialed number for cases that were transferred to another agent or queue</description>
        <externalId>true</externalId>
        <inlineHelpText>The dialed number for cases that were transferred to another agent or queue</inlineHelpText>
        <label>Transferred Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Approval_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Case Status update trigger to bypass validation rule due to roll ups being after triggers in order of execution.</description>
        <label>Trigger Approval Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Completed__c</fullName>
        <formula>Not(ispickval( Case_Type__c ,&quot;&quot;))</formula>
        <label>Type Completed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Aggregation_Info_Field_Tracker</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Time_with_Company__c</columns>
        <columns>Time_with_Agents__c</columns>
        <columns>Biz_Agent_Min__c</columns>
        <columns>Biz_Queue_Min__c</columns>
        <columns>Biz_Company_Min__c</columns>
        <columns>Biz_Customer_Min__c</columns>
        <columns>Cal_Agent_Min__c</columns>
        <columns>Cal_Company_Min__c</columns>
        <columns>No_Status_changes__c</columns>
        <columns>No_Owner_changes__c</columns>
        <columns>First_Close_Biz_Min__c</columns>
        <columns>First_Close_Owner__c</columns>
        <columns>Reopened_Flag__c</columns>
        <filterScope>Mine</filterScope>
        <label>Aggregation Info - Field Tracker</label>
    </listViews>
    <listViews>
        <fullName>Aggregation_Info_First_Close</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Time_with_Agents__c</columns>
        <columns>Time_with_Queues__c</columns>
        <columns>First_Close_Biz_Min__c</columns>
        <columns>First_Close_Cal_Min__c</columns>
        <columns>First_Close_Owner__c</columns>
        <columns>First_Close_Date_Time__c</columns>
        <columns>Reopened_Flag__c</columns>
        <columns>Time_With_Customer__c</columns>
        <columns>Time_With_Support__c</columns>
        <columns>Total_Cal_Days__c</columns>
        <columns>Total_Touches__c</columns>
        <filterScope>Mine</filterScope>
        <label>Aggregation Info - First Close</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Support Community</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>guest</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases_Traction</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Business_Unit__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Order_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>ORC_Closed_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases - Traction</label>
        <sharedTo>
            <role>Customer_Care_Leadership</role>
            <role>HBC_Corporate</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases_for_Follow_Up</fullName>
        <booleanFilter>2 AND (1 OR (3 and 4))</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Follow Up</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support_Case</value>
        </filters>
        <filters>
            <field>Is_Follow_Up__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Response Received</value>
        </filters>
        <label>All Cases for Follow Up</label>
    </listViews>
    <listViews>
        <fullName>Back_Office_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Back Office</label>
        <queue>Back_Office</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bay_Cebu_Team_Lead_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Bay Cebu Team Lead</label>
        <queue>Bay_Cebu_Team_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bay_Chat_English_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Bay Chat English</label>
        <queue>Bay_Chat_English</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bay_Chat_English_Supervisor_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Bay Chat - English Supervisor</label>
        <queue>Bay_Chat_English_Supervisor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bay_Chat_French_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Bay Chat French</label>
        <queue>Bay_Chat_French</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bay_Chat_French_Supervisor_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Bay Chat - French Supervisor</label>
        <queue>Bay_Chat_French_Supervisor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bay_French_ES_Team_Lead_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Bay French ES Team Lead</label>
        <queue>Bay_French_ES_Team_Lead</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chat_French_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Bay Chat French</label>
        <queue>Bay_Chat_French</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Click_to_Call_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Click to Call</label>
        <queue>Click_to_Call</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_French_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email - The Bay</value>
        </filters>
        <filters>
            <field>Case_Language__c</field>
            <operation>equals</operation>
            <value>French</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed French Cases</label>
        <sharedTo>
            <role>HBC_Corporate</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Click_to_Call</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Click to Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Emails</fullName>
        <active>true</active>
        <businessProcess>Marketing Process</businessProcess>
        <label>Marketing Emails</label>
    </recordTypes>
    <recordTypes>
        <fullName>Off_5th_Support_Case</fullName>
        <active>true</active>
        <businessProcess>Saks and Off 5th Support Process</businessProcess>
        <description>Record type for Off 5th support cases</description>
        <label>Off 5th Support Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Saks_Support_Case</fullName>
        <active>true</active>
        <businessProcess>Saks and Off 5th Support Process</businessProcess>
        <description>Record Type for Saks Support Cases</description>
        <label>Saks Support Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Case</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <description>This Record Type is used for Support Cases for Bay and LT cases</description>
        <label>Bay/LT Support Case</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Case_01_ORC_100_plus_go_to_SE_team</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(Trigger_Approval_Override__c),
ISCHANGED(Status),
ispickval(Status ,&quot;POS Team&quot;),
 ORC_Requiring_Approval_Count__c &gt; 0)
||
AND(
ISCHANGED(Status),
ispickval(Status ,&quot;Closed&quot;),
 ORC_Requiring_Approval_Count__c &gt; 0)</errorConditionFormula>
        <errorMessage>Order Refund/Credit above 100$ must be sent to the Service Excellence Team for approval before being sent to the POS Team or Closed (Validation Case - 01)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_02_Prevent_Follow_Up_On_Roles</fullName>
        <active>true</active>
        <description>This validation rule prevents specific roles in the company from creating a follow up date.</description>
        <errorConditionFormula>OR($UserRole.Name = &quot;L+T &amp; Bay Digital - Cebu&quot;,
$UserRole.Name = &quot;Bay Digital - El Salvador&quot;, 
$UserRole.Name = &quot;Saks &amp; Off 5th - El Salvador&quot;) &amp;&amp;  OR(ISCHANGED(Follow_Up_Date__c),
AND(ISCHANGED(Status), ISPICKVAL(Status, &quot;Follow Up&quot;)),AND(ISNEW(), ISPICKVAL(Status, &quot;Follow Up&quot;)))</errorConditionFormula>
        <errorMessage>As a front line agent you cannot set a follow up date. (Validation Case - 02)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_03_Escalating_POS_OR_MNR</fullName>
        <active>true</active>
        <description>Used to prevent certain users from escalating ORC POS or MNR Review</description>
        <errorConditionFormula>AND
(ISCHANGED( Status ), 
OR(
ISPICKVAL(Status, &apos;Escalate ORC POS Review&apos;),
ISPICKVAL(Status, &apos;Escalate ORC MNR Review&apos;)),
OR(
$Profile.Name = &apos;HBC Support Agent&apos;
,
$Profile.Name = &apos;HBC Service Excellence Agent&apos;
,
$Profile.Name = &apos;HBC Fraud Agent&apos; 
,
$Profile.Name = &apos;HBC POS Agent&apos;))</errorConditionFormula>
        <errorMessage>Only team leads and management can escalate a case awaiting POS or MNR Review (Validation Case - 03)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_04_Close_Case_Without_Case_Type</fullName>
        <active>true</active>
        <description>Prevents a user from closing a case that doesn&apos;t have a type.</description>
        <errorConditionFormula>AND(ISCHANGED(Status),
Ispickval(Status,&quot;Closed&quot;),isblank(Text(Case_Type__c)), $User.ProfileId &lt;&gt;&quot;00e2E0000022NRy&quot;)</errorConditionFormula>
        <errorDisplayField>Case_Type__c</errorDisplayField>
        <errorMessage>You must select a Case Type before closing the case (Validation Case - 04)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_05_Prevent_Close_Case_No_Contact</fullName>
        <active>true</active>
        <description>Validates if there is a contact on the case for some case types.</description>
        <errorConditionFormula>AND (Ispickval(Status, &quot;Closed&quot;),
$Profile.Name != &quot;System Administrator&quot;,
No_Contact__c = TRUE, 
NOT(OR(
Ispickval( Category__c, &quot;Customer asked for Store Information (phone number / details)&quot;),
Ispickval( Category__c, &quot;I need additional information details on a product&quot;),
Ispickval( Category__c, &quot;Inventory inquiry in store (website is out of stock)&quot;),
Ispickval( Category__c, &quot;Inventory inquiry on website&quot;),
Ispickval( Category__c, &quot;Transfer to CapOne&quot;),
Ispickval( Category__c, &quot;Transfer to Credit Services&quot;),
Ispickval( Category__c, &quot;Transfer to Store&quot;),
Ispickval( Category__c, &quot;Transfer to Total Guard/Vendor&quot;),
Ispickval( Category__c, &quot;What is your return policy?&quot;),
Ispickval( Category__c, &quot;Ghost Call&quot;)
)))</errorConditionFormula>
        <errorMessage>You can&apos;t close a case of this type without a valid contact. (Validation Case - 05)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_06_Follow_Up_Date</fullName>
        <active>false</active>
        <description>Check if follow up date is blank on follow up status. Ensure that follow up date is not more than 30 days into the future. Ensures that the date is not set in the past.</description>
        <errorConditionFormula>ispickval (Status, &quot;Follow Up&quot;) &amp;&amp; OR(isblank( Follow_Up_Date__c ), Follow_Up_Date__c  &gt; (TODAY() +30), (OR(ISCHANGED(Follow_Up_Date__c),ISNEW()) &amp;&amp; Follow_Up_Date__c &lt; TODAY()))</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>You must enter a Follow Up date if setting case to Follow Up Status. The date cannot be more than 30 days into the future. The date cannot be set in the past. (Validation Case - 06)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_07_Cant_close_case_with_active_ORC</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Closed&quot;),
  Is_ORC_Open__c,
  NOT(CONTAINS($Profile.Name,&quot;Administrator&quot;))
)</errorConditionFormula>
        <errorMessage>All ORC must be closed before the case can be closed.(Validation Case - 07)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_08_TL_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TL_Review_Required__c ,  ISBLANK(TL_Review_Reason__c) )</errorConditionFormula>
        <errorDisplayField>TL_Review_Reason__c</errorDisplayField>
        <errorMessage>Please enter an appropriate TL Review reason to proceed. (Validation Case - 08)</errorMessage>
    </validationRules>
</CustomObject>